--- a/src/workouts/components/ExerciseProgressList.css
+++ b/src/workouts/components/ExerciseProgressList.css
@@ -7,6 +7,8 @@
   width: 90%;
   padding: 0;
   margin: 1rem auto;
+  overflow: hidden;
+  border: 1px solid black;
 }
 
 .back-btn {
